# Test_2_Django

./: .dockerignore  .env  Dockerfile  README  docker-compose.yml  pyproject.toml
core/: gunicorn.conf.py
core/celery_utils/: __init__.py  tasks.py
core/commands/management/comands/: start_period_tasks.py
core/commands/management/commands/: repeat_send_email.py
core/core/: settings.py  urls.py
core/tests/: conftest.py  test_library.py
